fix: small fix for safari on iOS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 html {
   line-height: 1.6;
   font-size: var(--font-size);
+  text-size-adjust: none;
 
   --scroll-behavior: smooth;
   scroll-behavior: smooth;
